--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        GeniusGen Academy, Beed
+        <marquee> GeniusGen Academy, Beed </marquee>
+
     </body>
 </html>
