--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <marquee> GeniusGen Academy, Beed </marquee>
+        <marquee> GeniusGen Academy, Beed, 8275550224 </marquee>
 
     </body>
 </html>
