--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
   <head>
     <title>My Website</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@600&display=swap" rel="stylesheet">
   </head>
   <body>
-    <img src="assets/site.svg" style="width:100%;" alt="">
+    <nav>
+      <img src="assets/logo.png" alt="">
+      <span class="filler"></span>
+      <a class="top-links" href="#top">Home</a>
+      <a class="top-links" href="#coursss">Courses</a>
+      <a class="top-links" href="#contact-me">Contact Us</a>
+    </nav>
+    <img src="assets/banner1.png" class="banner uwu" id="top" alt="">
+
+    <div class="courses-cards " id="coursss">
+      <img src="assets/courses.svg">
+    </div>
+    <img src="assets/quote.svg" class="banner quote" alt="">
+    <div class="courses-cards">
+      <img src="assets/why-join.svg">
+    </div>
+    <div class="courses-cards blue">
+      <img src="assets/faq.svg">
+    </div>
+
+    <iframe src="https://www.jotform.com/build/231505088953460" id="contact-me" width="100%" height="750px" style="border:1px solid black;"> </iframe>
+    <div class="white-ovrlay">
+      
+    </div>
+
+    <img src="assets/footer.svg" class="banner" alt="">
+
+
   </body>
 </html>
 
